--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -3767,11 +3767,14 @@ img.avatar + img.avatar {
  * placeholder is cutoff.
  */
 .select2-selection__rendered, .select2-search,
-.select2-search__field:not([placeholder='']){width: 100% !important;}
+.select2-search__field:not([placeholder='']){
+  width: 100% !important;
+}
 /* Fix Canned Responses Select2 Height */
 #resp_sec .select2-results, #resp_sec .select2-results__choices {
     height: auto;
     max-height: 400px !important;
+    box-sizing: border-box;
 }
 #select2-cannedResp-results {
     height: auto;
